# AI-code-debugger-and-auto-fixer

./: README.md  requirements.txt
configs/: default_config.py
project_code/: pyproject.toml
src/cli/: main.py
src/core/: debugger.py  llm.py  llm_factory.py  utils.py
src/internet/: search.py
src/llms/: gemini_llm.py  huggingface_llm.py  openai_llm.py
src/prompts/: query_prompts.py  system_prompts.py
src/tests/: test_debugger.py
